--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,7 @@
-
 {
   "short_name": "BudgetSync",
   "name": "BudgetSync Calendar",
-  "icons": [
-    {
-      "src": "icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
+  "icons": [],
   "start_url": ".",
   "display": "standalone",
   "orientation": "portrait",
